# LFSIR_OLD

./: .gitignore  pyproject.toml
lfsir/: __init__.py  api.py  maintainer.py
lfsir/config/: default_settings.yaml
lfsir/core/: archive_handler.py  data_cleaner.py  data_engine.py  metadata_reader.py
lfsir/external_data/: external_data_cleaner.py
lfsir/metadata/: household.yaml  industries.yaml  schema.yaml  tables.yaml
lfsir/utils/: download_utils.py
